初版本需求文档

--- a/design/需求说明.md
+++ b/design/需求说明.md
@@ -1,1 +1,26 @@
-# 
+#  需求说明
+面向备案、影视公司、影视人、影视作品、娱乐事件的泛娱乐**查询与发现**平台。
+1. 提供综合查询功能，明细查询、关系发现等功能。
+2. 提供各大数据源集成。
+3. 提供后台定制抓取任务。
+4. 通过知识图谱的手段，帮助用户发现关系。
+# 用户
+## B端用户 影视工作室等、用于商务合作
+1. 提供备案信息查询、影视公司（业务）历史查询、公司艺人（档期）查询。
+## C端用户 新媒体工作者等
+1. 提供影视人、娱乐事件历史类查询。
+# 模块拆分
+## 综合查询功能
+提供备案、影视公司、影视人、影视作品、娱乐事件五个方面的查询功能。
+## 数据源支持
+备案——[国家备案公示](http://dy.chinasarft.gov.cn/)
+影视公司——包括影视工作室的详细信息[工商信息](https://www.qcc.com/firm_763307df5a500b5e3f581f376c1e4dd3.html)
+影视人——主要包括职业经历[豆瓣](https://movie.douban.com/celebrity/1040990/)[IMDB]
+影视作品——电影的详尽信息[豆瓣](https://movie.douban.com/celebrity/1040990/)[IMDB]
+娱乐事件——针对 影视人 影视作品的娱乐事件，包括新浪、新闻消息
+## 抓取任务
+调度各个数据源爬虫。
+1. 提供批量调度。
+2. 提供用户实时调度。
+## 知识图谱
+1. 融合各个数据源的数据，建立知识图谱索引。
