--- a/design/需求说明.md
+++ b/design/需求说明.md
@@ -18,7 +18,7 @@
 影视人——主要包括职业经历[豆瓣](https://movie.douban.com/celebrity/1040990/)[IMDB]
 影视作品——电影的详尽信息[豆瓣](https://movie.douban.com/celebrity/1040990/)[IMDB]
 娱乐事件——针对 影视人 影视作品的娱乐事件，包括新浪、新闻消息
-## 抓取任务
+## 接口平台
 调度各个数据源爬虫。
 1. 提供批量调度。
 2. 提供用户实时调度。
